# llm-review-agents

./: .gitignore  README.md  test_review.py
.github/scripts/: ocr-json-to-markdown.py
.github/workflows/: open-code-review.yml
.opencodereview/: rule.json
bot/: .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
bot/review_bot/: checkout.py  config.py  dedup.py  main.py  models.py  pipeline.py  registry.py  router.py
bot/review_bot/reviewers/: base.py  ocr.py  pr_agent.py
bot/tests/: test_app.py  test_checkout.py  test_config.py  test_dedup.py  test_github_api.py  test_github_verify.py  test_gitlab.py  test_models.py  test_ocr.py  test_pipeline.py  test_pr_agent.py  test_registry.py  test_router.py
docs/: add-a-reviewer.md  providers.md
docs/superpowers/plans/: 2026-07-02-reviewers-toolkit.md  2026-07-03-comment-triggered-review-bot.md
docs/superpowers/specs/: 2026-07-02-comment-triggered-review-bot-design.md  2026-07-02-reviewers-toolkit-design.md
examples/gitlab-ci-ocr/: .gitlab-ci.yml  README.md  format_review.js
reviewers/open-code-review/: README.md  ci.md  install.sh  local.md  ocr-review.sh
reviewers/open-code-review/ci/: Jenkinsfile  bitbucket-pipelines.yml  github-actions.yml  gitlab-ci.yml
reviewers/open-code-review/setup/: config.example.json  rule.example.json
reviewers/pr-agent/: README.md  ci.md  local.md
reviewers/pr-agent/ci/: Jenkinsfile  bitbucket-pipelines.yml  github-actions.yml  gitlab-ci.yml
reviewers/pr-agent/setup/: central-setup.sh  config.env.template
